Fixed whitespace issue

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1,6 +1,10 @@
-body{
-  margin-left: -15px;
-  margin-right: -15px;
+html,body
+{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 .center-image{
